--- a/Contents/Info.plist
+++ b/Contents/Info.plist
@@ -18,8 +18,12 @@
 	<string>1.0</string>
 	<key>PlexClientPlatforms</key>
 	<string>MacOSX,LGTV</string>
-	<key>PlexPluginDebug</key>
-	<string>1</string>
+	<key>PlexFrameworkVersion</key>
+	<string>2</string>
+	<key>PlexPluginConsoleLogging</key>
+	<string>1</string>	
+	<key>PlexPluginDevMode</key>
+	<string>0</string>
 	<key>PlexPluginMode</key>
 	<string>AlwaysOn</string>
 </dict>
